syntax = "proto3";

package media_inputs.v1;

service MediaInputsService {
  // Original: GetMediaInputStatus
  rpc Status(StatusRequest) returns (StatusResponse);
  // Original: OffsetMediaInputTimecode
  rpc OffsetTimecode(OffsetTimecodeRequest) returns (OffsetTimecodeResponse);
  // Original: SetMediaInputTimecode
  rpc SetTimecode(SetTimecodeRequest) returns (SetTimecodeResponse);
  // Original: SetMediaInputPauseState
  rpc IsPaused(IsPausedRequest) returns (IsPausedResponse);
  // Original: StopMediaInput
  rpc Stop(StopRequest) returns (StopResponse);
  // Original: RestartMediaInput
  rpc Restart(RestartRequest) returns (RestartResponse);
  // Original: NextMediaInputPlaylistItem
  rpc PlayNext(PlayNextRequest) returns (PlayNextResponse);
  // Original: PreviousMediaInputPlaylistItem
  rpc PlayPrevious(PlayPreviousRequest) returns (PlayPreviousResponse);
}

message StatusRequest {}

message StatusResponse {}

message OffsetTimecodeRequest {}

message OffsetTimecodeResponse {}

message SetTimecodeRequest {}

message SetTimecodeResponse {}

message IsPausedRequest {}

message IsPausedResponse {}

message StopRequest {}

message StopResponse {}

message RestartRequest {}

message RestartResponse {}

message PlayNextRequest {}

message PlayNextResponse {}

message PlayPreviousRequest {}

message PlayPreviousResponse {}
