syntax = "proto3";

package projectors.v1;

service ProjectorsService {
  // Original: GetProjectorList
  rpc List(ListRequest) returns (ListResponse);
  // Original: OpenProjector
  rpc Open(OpenRequest) returns (OpenResponse);
  // Original: CloseProjector
  rpc Close(CloseRequest) returns (CloseResponse);
}

message ListRequest {}

message ListResponse {}

message OpenRequest {}

message OpenResponse {}

message CloseRequest {}

message CloseResponse {}
