syntax = "proto3";

package recording.v1;

service RecordingService {
  // Original: GetRecordStatus
  rpc Status(StatusRequest) returns (StatusResponse);
  // Original: ToggleRecord
  rpc Toggle(ToggleRequest) returns (ToggleResponse);
  // Original: StartRecord
  rpc Start(StartRequest) returns (StartResponse);
  // Original: StopRecord
  rpc Stop(StopRequest) returns (StopResponse);
  // Original: ToggleRecordPause
  rpc TogglePause(TogglePauseRequest) returns (TogglePauseResponse);
  // Original: PauseRecord
  rpc Pause(PauseRequest) returns (PauseResponse);
  // Original: ResumeRecord
  rpc Resume(ResumeRequest) returns (ResumeResponse);
  // Original: GetRecordDirectory
  rpc Directory(DirectoryRequest) returns (DirectoryResponse);
  // Original: SetRecordDirectory
  rpc SetDirectory(SetDirectoryRequest) returns (SetDirectoryResponse);
  // Original: GetRecordFilenameFormatting
  rpc FilenameFormatting(FilenameFormattingRequest) returns (FilenameFormattingResponse);
  // Original: SetRecordFilenameFormatting
  rpc SetFilenameFormatting(SetFilenameFormattingRequest) returns (SetFilenameFormattingResponse);
}

message StatusRequest {}

message StatusResponse {}

message ToggleRequest {}

message ToggleResponse {}

message StartRequest {}

message StartResponse {}

message StopRequest {}

message StopResponse {}

message TogglePauseRequest {}

message TogglePauseResponse {}

message PauseRequest {}

message PauseResponse {}

message ResumeRequest {}

message ResumeResponse {}

message DirectoryRequest {}

message DirectoryResponse {}

message SetDirectoryRequest {}

message SetDirectoryResponse {}

message FilenameFormattingRequest {}

message FilenameFormattingResponse {}

message SetFilenameFormattingRequest {}

message SetFilenameFormattingResponse {}
