syntax = "proto3";

package obs_remote.transitions;

import "google/protobuf/duration.proto";

service TransitionsService {
  // Original: GetTransitionList
  rpc List(ListRequest) returns (ListResponse);
  // Original: GetCurrentTransition
  rpc Current(CurrentRequest) returns (CurrentResponse);
  // Original: SetCurrentTransition
  rpc SetCurrent(SetCurrentRequest) returns (SetCurrentResponse);
  // Original: SetCurrentTransitionDuration
  rpc SetCurrentDuration(SetCurrentDurationRequest) returns (SetCurrentDurationResponse);
  // Original: GetTransitionSettings
  rpc Settings(SettingsRequest) returns (SettingsResponse);
  // Original: SetTransitionSettings
  rpc SetSettings(SetSettingsRequest) returns (SetSettingsResponse);
  // Original: ReleaseTbar
  rpc ReleaseTBar(ReleaseTBarRequest) returns (ReleaseTBarResponse);
  // Original: SetTbarPosition
  rpc SetTBarPosition(SetTBarPositionRequest) returns (SetTBarPositionResponse);
  // Original: TriggerStudioModeTransition
  rpc TriggerStudioModeTransition(TriggerStudioModeTransitionRequest) returns (TriggerStudioModeTransitionResponse);
  // Original: CreateTransition
  rpc Create(CreateRequest) returns (CreateResponse);
  // Original: DeleteTransition
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message ListRequest {}

message ListResponse {}

message CurrentRequest {}

message CurrentResponse {
  string name = 1;
}

message SetCurrentRequest {
  string name = 1;
}

message SetCurrentResponse {}

message SetCurrentDurationRequest {
  google.protobuf.Duration duration = 1;
}

message SetCurrentDurationResponse {}

message SettingsRequest {}

message SettingsResponse {}

message SetSettingsRequest {}

message SetSettingsResponse {}

message ReleaseTBarRequest {}

message ReleaseTBarResponse {}

message SetTBarPositionRequest {
  float position = 1;
}

message SetTBarPositionResponse {}

message TriggerStudioModeTransitionRequest {}

message TriggerStudioModeTransitionResponse {}

message CreateRequest {}

message CreateResponse {}

message DeleteRequest {}

message DeleteResponse {}
